--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,10 +102,6 @@ img[alt*="emoji_"] {
 #footer {
 }
 
-.hidden {
-  display: none;
-}
-
 @mixin placeholder-align-center {
   text-align: center;
   padding: 1.5rem 0;
